# How-to-Write-CMake-for-HPC

./: LICENSE  README.md
MPI/: README.md
MPI/examples/: CMakeLists.txt  hello_mpi.c
OpenACC/: README.md
OpenACC/examples/: CMakeLists.txt  hello_acc.c
OpenMP/: README.md
OpenMP/examples/: CMakeLists.txt  hello_omp.c
